[package]
name = "veonep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.32"


[lib]
name = "veonep"
path = "./src/lib/mod.rs"
